[project]
name = "NeuronDensityPlots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]

[project.scripts]
yang-et-al-2022 = "yang_et_al_2022:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
