[project]
name = "NeuronDensityPlots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "statsmodels>=0.14.5",
    "scikit-posthocs>=0.11.4",
    "bioinfokit>=2.1.4",
]

[project.scripts]
neurondensityplots = "neurondensityplots:main"

[build-system]
requires = ["uv_build>=0.8.10,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
